--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
+    <title>MemoGrama</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-$END$
+    <div class="pages">
+        <div class="page">
+            <div class="container_page1">
+                <div class="hijo_container_page1">
+                    <h1>MEMOGRAMA</h1>
+                    <div class="texto">
+                        <p>¡Bienvenido a MemoGrama!</p>
+                        <p>¡Empareja las cartas iguales en el menor número de movimientos posible!</p>
+                        <p>¡Buena suerte!</p>
+                        <button id="start-game">Iniciar Juego</button>
+                    </div>
+
+                </div>
+                <div class="imagen">
+                    <img src="img/LogoMemoGrama.webp" alt="Logo MemoGrama">
+                </div>
+            </div>
+        </div>
+        <div class="page">
+            <div class="container_page2">
+                <div class="hijo_container_page2">
+                    <h1>MEMOGRAMA</h1>
+                    <p>¡Bienvenido a MemoGrama!</p>
+                </div>
+                <div class="tablero">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
