--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>MemoGrama</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="src/index.css">
 </head>
 <body>
     <div class="pages">
@@ -21,7 +21,7 @@
 
                 </div>
                 <div class="imagen">
-                    <img src="img/LogoMemoGrama.webp" alt="Logo MemoGrama">
+                    <img src="src/img/LogoMemoGrama.webp" alt="Logo MemoGrama">
                 </div>
             </div>
         </div>
@@ -38,6 +38,6 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="src/app.js"></script>
 </body>
 </html>
