--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="container_page2">
                 <div class="hijo_container_page2">
                     <h1>MEMOGRAMA</h1>
-                    <p id="contador">Tus intentos: </p>
+                    <p id="contador"></p>
                 </div>
                 <div class="tablero">
 
