--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <title>MemoGrama</title>
-    <link rel="stylesheet" href="src/index.css">
+    <link rel="stylesheet" href="./src/index.css">
 </head>
 <body>
     <div class="pages">
@@ -21,7 +21,7 @@
 
                 </div>
                 <div class="imagen">
-                    <img src="src/img/LogoMemoGrama.webp" alt="Logo MemoGrama">
+                    <img src="./src/img/LogoMemoGrama.webp" alt="Logo MemoGrama">
                 </div>
             </div>
         </div>
@@ -30,6 +30,11 @@
                 <div class="hijo_container_page2">
                     <h1>MEMOGRAMA</h1>
                     <p id="contador"></p>
+                    <select id="dificultad">
+                        <option value="facil" selected>Fácil</option>
+                        <option value="medio">Medio</option>
+                        <option value="difícil">Difícil</option>
+                    </select>
                 </div>
                 <div class="tablero">
 
@@ -37,7 +42,7 @@
             </div>
         </div>
     </div>
-
-    <script src="src/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./src/app.js"></script>
 </body>
 </html>
