--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 </div>
                 <div class="imagen">
-                    <img src="./src/img/LogoMemoGrama.webp" alt="Logo MemoGrama">
+                    <img src="./src/img/ironhack.png" alt="Logo MemoGrama">
                 </div>
             </div>
         </div>
